--- a/Heima-Example1/miniprogram/app.wxss
+++ b/Heima-Example1/miniprogram/app.wxss
@@ -1,5 +1,11 @@
 @import "./page/common/lib/weui.wxss";
 
+view {
+  padding: 10rpx;
+  margin: 10rpx;
+  background-color: lightblue;
+  border: 1px solid red;
+}
 
 /* reset */
 page {
