--- a/Example1_LocalLife/pages/home/home.wxml
+++ b/Example1_LocalLife/pages/home/home.wxml
@@ -1,2 +1,5 @@
-<!--pages/home/home.wxml-->
-<text>pages/home/home.wxml</text>
+<swiper indicator-dots="true" circular="true">
+  <swiper-item wx:for="{{swiperList}}" wx:key="id">
+    <image src="{{item.image}}"></image>
+  </swiper-item>
+</swiper>
