--- a/Example1_LocalLife/pages/home/home.wxss
+++ b/Example1_LocalLife/pages/home/home.wxss
@@ -6,3 +6,47 @@ swiper image {
   width: 100%;
   height: 100%;
 }
+
+.grid-list {
+  display: flex;
+  flex-wrap: wrap;
+  border-top: 1rpx solid #efefef;
+  border-left: 1rpx solid #efefef;
+}
+
+.grid-item {
+  width: 33.33%;
+  height: 200rpx;
+  display: flex;
+  flex-flow: wrap;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-right: 1rpx solid #efefef;
+  border-bottom: 1rpx solid #efefef;
+  box-sizing: border-box;
+}
+
+.grid-item view view {
+  text-align: center;
+}
+
+.grid-item image {
+  width: 60rpx;
+  height: 60rpx;
+}
+
+.grid-item text {
+  font-size: 24rpx;
+  margin-top: 10rpx;
+}
+
+.img-view {
+  display: flex;
+  padding: 10rpx 5rpx;
+  justify-content: space-around;
+}
+
+.img-view image {
+  width: 48%;
+}
